# python_playground

./: .gitignore  README.md
arguments/: pyproject.toml
arguments/argparser/: use_argument_choices.py
arguments/typer_examples/: entry_points_cli.py  simple_cli.py
async_stuff/: 1_neural_nine_example.py
better_notebooks/: blah.ipynb  pyproject.toml
bytes/: float_to_byte.py
cmake_python_test/: CMakeLists.txt
dataclass_explore/: field_instantiation.ipynb  field_replacement.ipynb  pyproject.toml
dataclass_explore/dataframe_validation/dataframe_validation/schemas/: __init__.py  item_with_group_name.py
dataclass_explore/dataframe_validation/tests/: conftest.py
dataclass_explore/dataframe_validation/tests/operations/: test_grouping_operations.py
dataframe_validation/: pyproject.toml
dataframe_validation/dataframe_validation/operations/: grouping_operations.py
dataframe_validation/dataframe_validation/schemas/: item_with_group_name.py
dataframe_validation/scripts/: example.py
dataframe_validation/tests/operations/: test_grouping_operations.py
dataframe_validation/tests/schemas/: test_item_with_group_name.py
dataframes/: read_from_string.ipynb
enum_stuff/: combining_enums.ipynb
exceptions/: ex.py
factories/: simple_object_factory.py
function_serving/: function_lib_object.py
hello_world/: basic_adder.py  basic_math.py  hello_world.py
http/: README.md  echoserver.py  taskListServer.py  webserver.py
image_display_loop/: concat.py  image_popup.py  loop.py  stacked.py
imagey_stuff/: pyproject.toml
imagey_stuff/display_loop/: stacked.py  subplots.py
iterable_classes/: built_in_iterator.py  iterables.ipynb  simple_item_loader.py
kwargs/: kwargs.py
loggers/: Makefile  pytest.ini
loggers/my_logger/: logging.py
loggers/test/: logging_test.py
looping/: loopy.py
mac_m1_issues/: pyproject.toml
masking/: cv2_rgb_mask.py
mockery/: basic_pyd_model.py  fast_api_generated_style_blah.py  fastapi_generated_model.py  on_the_fly_generation.ipynb  pyproject.toml  user.py
mockery/tests/: test_autospec_from_mock.py  test_basic_pyd_model.py  test_fastapi_generated_model.py
os_shutil_stuff/: os_shutil_stuff.py
performance_profiling/: list_vs_set_membership_check.py  time_profiling.py
pyarrow_stuff/: pyproject.toml  struct_manipulation.ipynb
ray_orchestration/: example_noray.py  example_ray.py
regexes/: regex.py
schemas_examples/: pandera.ipynb  pandera_item_schemas.py  pyarrow.ipynb  pyarrow_item_schemas.py  pyproject.toml
shapes/: interpolate_points_to_shape.py
sqlite_experiments/: create_from_script.py  data.db  get_users.py  pyproject.toml
time_wrangling/: sort_times.py
try_out_modin/: pyproject.toml
try_out_modin/try_out_modin/: an_example.ipynb
validate_function_params/: pydantic_validation.py
