[tool.poetry]
name = "better-notebooks"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
marimo = "^0.14.10"
matplotlib = "^3.10.3"
numpy = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
