cmake_minimum_required(VERSION 3.12.0)
project(python_sockets)
find_package (Python3 REQUIRED COMPONENTS Interpreter Development)
message( "Python3_FOUND: " ${Python3_FOUND} )
message( "Python3_LIBRARY_DIRS: " ${Python3_LIBRARY_DIRS} )
message( "Python3_STDLIB: " ${Python3_STDLIB} )
message( "Python3_STDARCH: " ${Python3_STDARCH} )
message( "Python3_SITELIB: " ${Python3_SITELIB} )
message( "Python3_SITEARCH: " ${Python3_SITEARCH} )
message( "Python3_SOABI: " ${Python3_SOABI} )
message( "Python3_Compiler_FOUND: " ${Python3_Compiler_FOUND} )