[tool.poetry]
name = "dataclass-explore"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"
packages = [{include = "dataclass_explore"}]

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "^6.112.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
