[tool.poetry]
name = "mockery"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^26.0.0"
pydantic = "^2.8.2"
hypothesis = "^6.108.5"
pytest = "^8.3.2"
numpy = "^2.0.1"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
