[tool.poetry]
name = "schemas-examples"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"
packages = [{include = "schemas_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
pyarrow = "^17.0.0"
pandera = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
